fix(post-image): input -> add cropper

--- a/src/app/event/post-images/post-images.component.scss
+++ b/src/app/event/post-images/post-images.component.scss
@@ -70,7 +70,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 16px;
-  margin-bottom: 24px;
+  margin-bottom: 80px;
   &__img {
     position: relative;
   }
@@ -94,15 +94,27 @@
   }
 }
 
+.actions-wrap {
+  max-width: 600px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
 .action {
-  margin-bottom: 24px;
-  &__set-btn {
-    max-width: 1600px;
-    max-height: 1200px;
-    padding: 24px;
-    border-radius: 8px;
-    border: none;
-    background: #eee;
+  margin: 24px auto;
+  width: 144px;
+  height: 81px;
+  border-radius: 8px;
+  border: none;
+  &--left {
+    width: 81px;
+    height: 81px;
+  }
+  &--right {
+    width: 81px;
+    height: 144px;
   }
 }
 
@@ -120,8 +132,4 @@
   &__error {
     color: red;
   }
-}
-
-deer-crop-trigger {
-  border-radius: 10px;
 }
